tests/common/network-policies/calico-allow-all.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: global-allow-all-traffic
  namespace: calico-system
spec:
  selector: all()
  ingress:
  - action: Allow
  egress:
  - action: Allow
  types:
  - Ingress
  - Egress
  # High priority to override other policies
  order: 100
